# high-perf-transport-msg-framework

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  pages.yml
cmake/: Platform.cmake
include/highperf/base/: Buffer.h  Timestamp.h
site/: index.html
src/base/: Buffer.cpp  Timestamp.cpp
tests/: CMakeLists.txt
tests/base/: BufferTest.cpp  TimestampTest.cpp
